--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     
 
-    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/57.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/57.jpeg" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
