--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <meta name="msapplication-navbutton-color" content="#002e62">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="Web site created using create-react-app"/>
+
+    <meta property="og:title" content="Hangmyxachtay.org. Bring America To Your Door."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.hangmyxachtay.org"/>
+    <meta property="og:image" content="%PUBLIC_URL%/72.png"/>
     
 
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/57.png" />
