metadata title logo page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Hangmyxachtay.org. Bring America To Your Door."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.hangmyxachtay.org"/>
-    <meta property="og:image" content="%PUBLIC_URL%/72.png"/>
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpeg"/>
     
 
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/57.png" />
