--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#002e62">
     <meta name="msapplication-navbutton-color" content="#002e62">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Get the best of Shopping with Hang My Xach Tay"/>
 
     <meta property="og:title" content="Hangmyxachtay.org. Bring America To Your Door."/>
     <meta property="og:type" content="website"/>
