--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="description" content="Get the best of Shopping with Hang My Xach Tay"/>
 
-    <meta property="og:title" content="Hangmyxachtay.org. Bring America To Your Door."/>
+    <meta property="og:title" content="Hangmyxachtay.org. Let's bring America To Your Door."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.hangmyxachtay.org"/>
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpeg"/>
