--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Hangmyxachtay.org. Let's bring America To Your Door."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.hangmyxachtay.org"/>
-    <meta property="og:image" content="%PUBLIC_URL%/preview.jpeg"/>
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png"/>
     
 
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/57.png" />
@@ -48,6 +48,17 @@
 
 
     <title>Hàng Mỹ Xách Tay</title>
+
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+      <script>
+        window.OneSignal = window.OneSignal || [];
+        OneSignal.push(function() {
+          OneSignal.init({
+            appId: "dfe186a8-4d51-4c7b-b118-994cb46e84e7",
+          });
+        });
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
